--- a/Onyx-Editor/Onyx-Editor.csproj
+++ b/Onyx-Editor/Onyx-Editor.csproj
@@ -20,8 +20,7 @@
     <OutputPath>..\bin\Debug-x86_64\Onyx-Editor\</OutputPath>
     <BaseIntermediateOutputPath>..\bin-int\Debug-x86_64\Onyx-Editor\</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -33,8 +32,7 @@
     <OutputPath>..\bin\Release-x86_64\Onyx-Editor\</OutputPath>
     <BaseIntermediateOutputPath>..\bin-int\Release-x86_64\Onyx-Editor\</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -97,7 +95,6 @@
       <Name>Onyx-CLR</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
