--- a/Onyx-CLR/Onyx-CLR.vcxproj
+++ b/Onyx-CLR/Onyx-CLR.vcxproj
@@ -103,16 +103,21 @@ IF EXIST ..\bin\Release-x86_64\Onyx-CLR\Onyx-CLR.dll\ (xcopy /Q /E /Y /I ..\bin\
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Editor\SceneEditorCLR.h" />
     <ClInclude Include="src\Bitmap\BitmapDirect.h" />
-    <ClInclude Include="src\Editor\Editor.h" />
+    <ClInclude Include="src\Editor\EditorCoreCLR.h" />
     <ClInclude Include="src\Engine\Vector.h" />
+    <ClInclude Include="src\Entity\Components.h" />
+    <ClInclude Include="src\Entity\Entity.h" />
     <ClInclude Include="src\Onyx-CLR.h" />
     <ClInclude Include="src\pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Editor\SceneEditorCLR.cpp" />
     <ClCompile Include="src\AssemblyInfo.cpp" />
     <ClCompile Include="src\Bitmap\BitmapDirect.cpp" />
-    <ClCompile Include="src\Editor\Editor.cpp" />
+    <ClCompile Include="src\Editor\EditorCoreCLR.cpp" />
+    <ClCompile Include="src\Entity\Entity.cpp" />
     <ClCompile Include="src\Onyx-CLR.cpp" />
     <ClCompile Include="src\pch.cpp" />
   </ItemGroup>
