--- a/Onyx-CLR/Onyx-CLR.vcxproj
+++ b/Onyx-CLR/Onyx-CLR.vcxproj
@@ -105,7 +105,7 @@ IF EXIST ..\bin\Release-x86_64\Onyx-CLR\Onyx-CLR.dll\ (xcopy /Q /E /Y /I ..\bin\
   <ItemGroup>
     <ClInclude Include="src\Editor\SceneEditorCLR.h" />
     <ClInclude Include="src\Bitmap\BitmapDirect.h" />
-    <ClInclude Include="src\Editor\EditorCoreCLR.h" />
+    <ClInclude Include="src\Editor\EditorApplicationCLR.h" />
     <ClInclude Include="src\Engine\Vector.h" />
     <ClInclude Include="src\Entity\Components.h" />
     <ClInclude Include="src\Entity\Entity.h" />
@@ -116,7 +116,7 @@ IF EXIST ..\bin\Release-x86_64\Onyx-CLR\Onyx-CLR.dll\ (xcopy /Q /E /Y /I ..\bin\
     <ClCompile Include="src\Editor\SceneEditorCLR.cpp" />
     <ClCompile Include="src\AssemblyInfo.cpp" />
     <ClCompile Include="src\Bitmap\BitmapDirect.cpp" />
-    <ClCompile Include="src\Editor\EditorCoreCLR.cpp" />
+    <ClCompile Include="src\Editor\EditorApplicationCLR.cpp" />
     <ClCompile Include="src\Entity\Entity.cpp" />
     <ClCompile Include="src\Onyx-CLR.cpp" />
     <ClCompile Include="src\pch.cpp" />
