--- a/Onyx/Onyx.vcxproj.filters
+++ b/Onyx/Onyx.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClInclude Include="src\Onyx\Audio\Sound.h">
       <Filter>src\Onyx\Audio</Filter>
     </ClInclude>
-    <ClInclude Include="src\Onyx\Audio\SoundManager.h">
-      <Filter>src\Onyx\Audio</Filter>
-    </ClInclude>
     <ClInclude Include="src\Onyx\Camera\Camera.h">
       <Filter>src\Onyx\Camera</Filter>
     </ClInclude>
@@ -168,9 +165,6 @@
     <ClInclude Include="src\Onyx\Graphics\Renderer2D.h">
       <Filter>src\Onyx\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="src\Onyx\Graphics\Renderer3D.h">
-      <Filter>src\Onyx\Graphics</Filter>
-    </ClInclude>
     <ClInclude Include="src\Onyx\Graphics\RendererAPI.h">
       <Filter>src\Onyx\Graphics</Filter>
     </ClInclude>
@@ -185,12 +179,6 @@
     </ClInclude>
     <ClInclude Include="src\Onyx\Graphics\VertexArray.h">
       <Filter>src\Onyx\Graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Onyx\Model\Model.h">
-      <Filter>src\Onyx\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Onyx\Model\ModelLoader.h">
-      <Filter>src\Onyx\Model</Filter>
     </ClInclude>
     <ClInclude Include="src\Onyx\Onyx.h">
       <Filter>src\Onyx</Filter>
@@ -222,9 +210,6 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLRenderer2D.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRenderer3D.h">
-      <Filter>src\Platform\OpenGL</Filter>
-    </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
@@ -236,33 +221,6 @@
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
       <Filter>src\Platform\OpenGL</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanBuffer.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanDevice.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanGraphicsContext.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanInstance.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanRenderer2D.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanRendererAPI.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanShader.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanSurface.h">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Vulkan\VulkanSwapchain.h">
-      <Filter>src\Platform\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsFileIO.h">
       <Filter>src\Platform\Windows</Filter>
@@ -978,9 +936,6 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\Onyx\Editor\Core\EditorCore.h">
-      <Filter>src\Onyx\Editor</Filter>
-    </ClInclude>
     <ClInclude Include="src\Onyx\Editor\Core\EditorInput.h">
       <Filter>src\Onyx\Editor</Filter>
     </ClInclude>
@@ -998,12 +953,21 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
     <ClInclude Include="src\Onyx\Editor\Core\EditorRenderer.h" />
     <ClInclude Include="src\Onyx\Core\ApplicationContext.h" />
+    <ClInclude Include="src\Onyx\Graphics\Model.h">
+      <Filter>src\Onyx\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Onyx\Graphics\ModelLoader.h">
+      <Filter>src\Onyx\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Onyx\Renderer\Renderer3D.h" />
+    <ClInclude Include="src\Onyx\Editor\Core\EditorApplication.h">
+      <Filter>src\Onyx\Editor</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Onyx\Graphics\Material.h" />
+    <ClInclude Include="src\Onyx\Graphics\Vertex.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Onyx\Audio\Sound.cpp">
-      <Filter>src\Onyx\Audio</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Onyx\Audio\SoundManager.cpp">
       <Filter>src\Onyx\Audio</Filter>
     </ClCompile>
     <ClCompile Include="src\Onyx\Camera\FirstPersonCameraController.cpp">
@@ -1027,9 +991,6 @@
     <ClCompile Include="src\Onyx\Console\Console.cpp">
       <Filter>src\Onyx\Console</Filter>
     </ClCompile>
-    <ClCompile Include="src\Onyx\Core\Application.cpp">
-      <Filter>src\Onyx\Core</Filter>
-    </ClCompile>
     <ClCompile Include="src\Onyx\Core\Layer.cpp">
       <Filter>src\Onyx\Core</Filter>
     </ClCompile>
@@ -1051,9 +1012,6 @@
     <ClCompile Include="src\Onyx\Graphics\Renderer2D.cpp">
       <Filter>src\Onyx\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="src\Onyx\Graphics\Renderer3D.cpp">
-      <Filter>src\Onyx\Graphics</Filter>
-    </ClCompile>
     <ClCompile Include="src\Onyx\Graphics\RendererAPI.cpp">
       <Filter>src\Onyx\Graphics</Filter>
     </ClCompile>
@@ -1068,12 +1026,6 @@
     </ClCompile>
     <ClCompile Include="src\Onyx\Graphics\VertexArray.cpp">
       <Filter>src\Onyx\Graphics</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Onyx\Model\Model.cpp">
-      <Filter>src\Onyx\Model</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Onyx\Model\ModelLoader.cpp">
-      <Filter>src\Onyx\Model</Filter>
     </ClCompile>
     <ClCompile Include="src\Onyx\Physics\Physics.cpp">
       <Filter>src\Onyx\Physics</Filter>
@@ -1096,9 +1048,6 @@
     <ClCompile Include="src\Platform\OpenGL\OpenGLRenderer2D.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRenderer3D.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
-    </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
@@ -1110,30 +1059,6 @@
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
       <Filter>src\Platform\OpenGL</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanBuffer.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanDevice.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanGraphicsContext.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanInstance.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanRenderer2D.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanRendererAPI.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanSurface.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\Vulkan\VulkanSwapchain.cpp">
-      <Filter>src\Platform\Vulkan</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsFileIO.cpp">
       <Filter>src\Platform\Windows</Filter>
@@ -1156,9 +1081,6 @@
     <ClCompile Include="vendor\tinyxml2\tinyxml2.cpp">
       <Filter>vendor\tinyxml2</Filter>
     </ClCompile>
-    <ClCompile Include="src\Onyx\Editor\Core\EditorCore.cpp">
-      <Filter>src\Onyx\Editor</Filter>
-    </ClCompile>
     <ClCompile Include="src\Onyx\Editor\Core\EditorInput.cpp">
       <Filter>src\Onyx\Editor</Filter>
     </ClCompile>
@@ -1175,5 +1097,13 @@
     <ClCompile Include="src\Onyx\Graphics\Framebuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
     <ClCompile Include="src\Onyx\Editor\Core\EditorRenderer.cpp" />
+    <ClCompile Include="src\Onyx\Graphics\ModelLoader.cpp">
+      <Filter>src\Onyx\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Onyx\Renderer\Renderer3D.cpp" />
+    <ClCompile Include="src\Onyx\Editor\Core\EditorApplication.cpp">
+      <Filter>src\Onyx\Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Onyx\Graphics\Material.cpp" />
   </ItemGroup>
 </Project>
