--- a/Onyx/onyx.vcxproj
+++ b/Onyx/onyx.vcxproj
@@ -109,12 +109,15 @@ IF EXIST ..\bin\Release-x86_64\Onyx\Onyx.dll\ (xcopy /Q /E /Y /I ..\bin\Release-
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Onyx\Resources\Hasher.h" />
+    <ClInclude Include="src\Onyx\Resources\MaterialCache.h" />
     <ClInclude Include="src\Onyx\Editor\Components\EditorCameraController.h" />
-    <ClInclude Include="src\Onyx\Editor\Core\EditorRenderer.h" />
     <ClInclude Include="src\Onyx\Graphics\Material.h" />
     <ClInclude Include="src\Onyx\Graphics\Vertex.h" />
     <ClInclude Include="src\Onyx\Renderer\Renderer3D.h" />
     <ClInclude Include="src\Onyx\Core\ApplicationContext.h" />
+    <ClInclude Include="src\Onyx\Resources\TextureCache.h" />
+    <ClInclude Include="src\Onyx\Runtime\RuntimeApplication.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
     <ClInclude Include="src\Onyx\Graphics\Framebuffer.h" />
     <ClInclude Include="src\Onyx\Editor\Components\SceneEditorSelector.h" />
@@ -406,10 +409,12 @@ IF EXIST ..\bin\Release-x86_64\Onyx\Onyx.dll\ (xcopy /Q /E /Y /I ..\bin\Release-
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Onyx\Resources\MaterialCache.cpp" />
     <ClCompile Include="src\Onyx\Editor\Components\EditorCameraController.cpp" />
-    <ClCompile Include="src\Onyx\Editor\Core\EditorRenderer.cpp" />
     <ClCompile Include="src\Onyx\Graphics\Material.cpp" />
     <ClCompile Include="src\Onyx\Renderer\Renderer3D.cpp" />
+    <ClCompile Include="src\Onyx\Resources\TextureCache.cpp" />
+    <ClCompile Include="src\Onyx\Runtime\RuntimeApplication.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
     <ClCompile Include="src\Onyx\Graphics\Framebuffer.cpp" />
     <ClCompile Include="src\Onyx\Editor\Components\SceneEditorSelector.cpp" />
