Added Scene data class to send scene details to the editor from core

--- a/Onyx-Editor/Onyx-Editor.csproj
+++ b/Onyx-Editor/Onyx-Editor.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="src\OnyxEditor\UI\OnyxMenuHeader.cs" />
     <Compile Include="src\OnyxEditor\UI\Viewport\RendererSurface.cs" />
     <Page Include="src\OnyxEditor\UI\Viewport\Viewport.xaml">
       <Generator>MSBuild:Compile</Generator>
